--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
   "manifest_version": 2,
   "name": "Touch of Invisibility",
-  "version": "1.1",
+  "version": "1.2",
 
   "description": "Makes anything you click invisible. Can undo invisibility.",
 
@@ -14,6 +14,13 @@
     "default_icon": "icons/handprint-32x32.png",
     "default_title": "Touch of Invisibility",
     "default_popup": "settings.html"
+  },
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "chett.tiller@gmail.com",
+      "strict_min_version": "48.0"
+    }
   },
 
   "content_scripts": [
